moving empty block inserter icon inwards to prevent hiding behind admin menu

--- a/src/block-globals.editor.scss
+++ b/src/block-globals.editor.scss
@@ -60,7 +60,7 @@
 	z-index: 10;
 }
 
-/* removing top/bottom margins that mess with spacing of gutenberg default setting--might need to find a better way around this*/
+/* removing top/bottom margins that mess with spacing of gutenberg default setting*/
 .block-editor-block-list__layout .block-editor-default-block-appender>.block-editor-default-block-appender__content,
 .block-editor-block-list__layout>.block-editor-block-list__block>.block-editor-block-list__block-edit,
 .block-editor-block-list__layout>.block-editor-block-list__layout>.block-editor-block-list__block>.block-editor-block-list__block-edit {
@@ -109,6 +109,11 @@
 
 	.block-editor-block-list__block .block-editor-block-contextual-toolbar {
 		z-index: 18;
+	}
+
+	/* moving add block inserter inwards a bit because it hides behind menu otherwise */
+	.post-type-page .block-editor-block-list__empty-block-inserter {
+		left: -17px;
 	}
 }
 
